# tutuicmptunnel-kmod

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README_zh-CN.md  run_testfile  tidy  tucrypto_config.h.in
.github/workflows/: tutuicmptunnel-archlinux-pkg.yml  tutuicmptunnel-deb.yml  tutuicmptunnel-ubuntu-deb.yml
bpf/: Makefile  README.md  gen-deps.sh  tutuicmptunnel.bpf.c
common/: CMakeLists.txt  defs.h  list.h  log.h  log_impl.c  log_impl.h  net_proto.h  network.h  parser.c  parser.h  read_script.c  read_script.h  resolve.c  resolve.h  try.h  tuparser.c  tuparser.h
contrib/etc/default/: kcptun-client-rack
contrib/etc/systemd/system/: kcptun-client@.service  tutuicmptunnel-client@.service  tutuicmptunnel-kmod-client@.service  tutuicmptunnel-kmod-server@.service  tutuicmptunnel-server-reaper.service  tutuicmptunnel-server-reaper.timer  tutuicmptunnel-server@.service  tutuicmptunnel-tuctl-server.service
contrib/scripts/: PKGBUILD  checksum.py  common.py  hextoip.py  packet.py  read_tun0.py  skb.py  start_kcptun_client.sh  sync_tutu_ip_by_tuserver.sh  sync_tutu_ip_smart.lua
docs/: benchmark.md  hysteria.md  hysteria_zh-CN.md  iperf3.md  iperf3_zh-CN.md  mosh.md  mosh_zh-CN.md  openwrt.md  openwrt_zh-CN.md  shadowquic.md  shadowquic_zh-CN.md  wireguard.md  wireguard_zh-CN.md  xray_dns.md  xray_dns_zh-CN.md  xray_hysteria.md  xray_hysteria_zh-CN.md  xray_kcptun.md  xray_kcptun_zh-CN.md  xray_mkcp.md  xray_mkcp_zh-CN.md
kmod/: Makefile.in  README.md  README_zh-CN.md  compat.h  defs.h  dkms.conf.in  genl.c  hashtab.c  hashtab.h  t  tutu.c  tutuicmptunnel.h
ktuctl/: CMakeLists.txt  README.md  README_zh-CN.md  script_lexer.l  script_parser.y  tuctl.c  tuctl.h  uid_map.c  uid_map_lexer.l  uid_map_parser.y
scripts/: install-server.sh
toolchains/: openwrt-aarch64.cmake  openwrt-mipsel.cmake  openwrt-x86_64.cmake  win32-mingw64.cmake
tucrypto/: CMakeLists.txt  argon2.c  argon2.h  blake2-impl.h  blake2.h  blake2b.c  blamka-round-opt.h  blamka-round-ref.h  core.c  core.h  encoding.c  encoding.h  genkat.c  genkat.h  get_random_bytes.c  opt.c  poly1305-donna-16.h  poly1305-donna-32.h  poly1305-donna-64.h  poly1305-donna-8.h  poly1305-donna.c  poly1305-donna.h  thread.c  thread.h  tucrypto.c  tucrypto.h  xchacha20.c  xchacha20.h
tuctl/: CMakeLists.txt  README.md  auto_pin.c  tuctl.c  tuctl.h
tuserver/: CMakeLists.txt  README.md  README_zh-CN.md  common.c  common.h  log.c  ratelimiter.c  tuctl_client.c  tuctl_server.c
tutu_csum_fixup/: Makefile.in  README.md  csum-hack.h  dkms.conf.in  tutu_csum_fixup.c
win32/: CMakeLists.txt  icmptune.c  log.c  windivert.h
