if(USE_SODIUM)
  add_library(sodium_dep INTERFACE)
  target_include_directories(sodium_dep INTERFACE ${SODIUM_INCLUDE_DIR})
  target_link_libraries(sodium_dep INTERFACE ${SODIUM_LIBRARY})
endif()

add_executable(tuctl_client tuctl_client.c common.c)
target_link_libraries(tuctl_client PRIVATE common pthread)
if(USE_TUCRYPTO)
  target_link_libraries(tuctl_client PRIVATE tucrypto)
endif()
if(USE_SODIUM)
  target_link_libraries(tuctl_client PRIVATE sodium_dep)
endif()
if(WIN32)
  target_link_libraries(tuctl_client PRIVATE bcrypt ws2_32)
endif()
install(TARGETS tuctl_client RUNTIME DESTINATION bin)

if(NOT WIN32)
  add_executable(tuctl_server tuctl_server.c ratelimiter.c common.c)
  target_link_libraries(tuctl_server PRIVATE common pthread)
  if(USE_TUCRYPTO)
    target_link_libraries(tuctl_server PRIVATE tucrypto)
  endif()
  if(USE_SODIUM)
    target_link_libraries(tuctl_server PRIVATE sodium_dep)
  endif()
  install(TARGETS tuctl_server RUNTIME DESTINATION bin)
endif()

# vim: set sw=2 ts=2 et:
